aside menu added

--- a/GameHubCSharp/Views/GameEvent/GameEventDetail.cshtml
+++ b/GameHubCSharp/Views/GameEvent/GameEventDetail.cshtml
@@ -13,7 +13,7 @@
                 <p class="card-text">Starts on : @Model.StartDate</p>
                 <p class="card-text">Ends on : @Model.DueDate</p>
                 <p class="card-text">Discord link : @Model.DiscordUrl</p>
-                <p class="card-text">Description : @Model.Description</p>
+                <p class="card-text" style="word-break:break-word">Description : @Model.Description</p>
             </div>
             <div style="display: inline-block;width: 45%;height: 70%;vertical-align:top;" class="text-left">
                 <h6 style="font-size: 25px" class="card-text">Players for this event:</h6>
