--- a/GameHubCSharp/Views/Home/Home.cshtml
+++ b/GameHubCSharp/Views/Home/Home.cshtml
@@ -74,7 +74,7 @@
         }
         $("#progress").show();
 
-        fetch('https://localhost:44348/resource?game=' + gameName + '&page=' + pageIndex + '&pageSize=6', {
+        fetch(`${location.origin}/resource?game=` + gameName + '&page=' + pageIndex + '&pageSize=6', {
             method: 'GET', headers: {
                 'Content-Type': 'application/json',
                 'Accept': 'application/json'
