--- a/GameHubCSharp/Views/GameEvent/GameEventDetail.cshtml
+++ b/GameHubCSharp/Views/GameEvent/GameEventDetail.cshtml
@@ -51,7 +51,7 @@
             {
 
                 <div style="position:relative;" id="last">
-                    <form style="width:auto" asp-controller="GameEvent" asp-route-pesho="123" asp-action="GameEventDelete" method="post">
+                    <form style="width:auto" id="event-del" asp-controller="GameEvent" asp-route-pesho="123" asp-action="GameEventDelete" method="post">
                         <input type="text" class="form-control is-invalid"
                                asp-for="Id" value="@Model.Id" type="hidden" />
                         @*  <a href="/game/delete?id=@Model.Id" class="btn btn-primary border-0 bg-danger btn-lg mt-5 ml-3"
