--- a/GameHubCSharp/wwwroot/css/style.css
+++ b/GameHubCSharp/wwwroot/css/style.css
@@ -57,14 +57,30 @@ form {
     text-align: center;
     padding: 0;
     border: none;
-    background-color: #a000008f;
+    
 }
 
-    #logout:hover {
-        background-color: rgba(253, 0, 0, 0.56);
-    }
+#logout:hover {
+   background-color: #8f8787;
+}
 
 #logout-button {
+    background-color: rgba(26, 3, 29, -1);
+    border: none;
+}
+#delete-acc {
+    display: inline-block;
+    margin: 0;
+    width: auto;
+    text-align: center;
+    padding: 0;
+    border: none;
+    background-color: #a000008f;
+}
+    #delete-acc:hover {
+        background-color: rgba(253, 0, 0, 0.56);
+    }
+#delete-acc-button {
     background-color: rgba(26, 3, 29, -1);
     border: none;
 }
