--- a/GameHubCSharp/Views/GameEvent/GameEventDetail.cshtml
+++ b/GameHubCSharp/Views/GameEvent/GameEventDetail.cshtml
@@ -64,31 +64,36 @@
             }
             else if (Model.NumberOfPlayers + 1 - Model.Players.Count(x => x.Status == true) > 0)
             {
+                var list = Model.Players.Where(p => p.Username == User.Identity.Name).ToList();
+                @if (list.Count== 0)
+                {
 
-                <div style="position:relative;" id="last">
 
-                    <form class="mt-5 text-left form-event" id="form1" asp-controller="GameEvent" asp-action="GameEventAddPlayer"
-                          method="POST">
-                        <div class="text-left">
-                            <p style="color: lawngreen; margin-left: 5%" class="card-text mb-3">Your nick name :</p>
-                        </div>
-                        <input type="text" class="form-control is-invalid"
-                               asp-for="Id" value="@Model.Id" name="gameEventId" type="hidden" />
-                        <input style="margin-left: 5%;width: 70%; margin-bottom: 4%" type="text" name="userNick" id="username"
-                               class="form-control is-invalid d-inline-block"
-                               aria-describedby="validatedInputGroupPrepend"
-                               required>
+                    <div style="position:relative;" id="last">
 
-                        <button id="joinEvent" class="btn btn-primary border-0 mb-1 bg-dark mr-2 btn-lg ml-3">I'm in</button>
-
-                        @if ((bool?)ViewData["valid"] != true)
-                        {
-                            <div class="invalid-feedback">
-                                <span style="color: #ff0000;font-size:15px;margin-left: 5%;">This nickname is already takken for this event.</span>
+                        <form class="mt-5 text-left form-event" id="form1" asp-controller="GameEvent" asp-action="GameEventAddPlayer"
+                              method="POST">
+                            <div class="text-left">
+                                <p style="color: lawngreen; margin-left: 5%" class="card-text mb-3">Your nick name :</p>
                             </div>
-                        }
-                    </form>
-                </div>
+                            <input type="text" class="form-control is-invalid"
+                                   asp-for="Id" value="@Model.Id" name="gameEventId" type="hidden" />
+                            <input style="margin-left: 5%;width: 70%; margin-bottom: 4%" type="text" name="userNick" id="username"
+                                   class="form-control is-invalid d-inline-block"
+                                   aria-describedby="validatedInputGroupPrepend"
+                                   required>
+
+                            <button id="joinEvent" class="btn btn-primary border-0 mb-1 bg-dark mr-2 btn-lg ml-3">I'm in</button>
+
+                            @if ((bool?)ViewData["valid"] != true)
+                            {
+                                <div class="invalid-feedback">
+                                    <span style="color: #ff0000;font-size:15px;margin-left: 5%;">This nickname is already takken for this event.</span>
+                                </div>
+                            }
+                        </form>
+                    </div>
+                }
             }
 
         </div>
