--- a/GameHubCSharp/Views/GameEvent/GameEventDetail.cshtml
+++ b/GameHubCSharp/Views/GameEvent/GameEventDetail.cshtml
@@ -18,7 +18,7 @@
                         string temp = "";
 
                         var cur = Model.Players.Where(p => p.Username == User.Identity.Name);
-                        if(cur.Count() != 0 && cur.First().Status == true)
+                        if (cur.Count() != 0 && cur.First().Status == true)
                         {
                             temp = Model.DiscordUrl;
                         }
@@ -33,28 +33,38 @@
                 <ul>
                     @foreach (var player in Model.Players)
                     {
-                        if (!(User.Identity.Name == Model.Owner.Username))
+                        if (User.Identity.Name != Model.Owner.Username)
                         {
                             if (player.Status)
                             {
                                 <li style="font-size: 20px;" class="card-text ml-4">
                                     @player.UsernameInGame
+                                    @if (User.Identity.Name == player.Username)
+                                    {
+                                        <div class="ml-sm-5 d-inline-block float-right ">
+                                            <a asp-route-playerName="@player.UsernameInGame" asp-route-roomId="@Model.Id" asp-action="Decline" asp-controller="GameEvent"> <i class="far fa-times-circle fa-lg ml-2" style="color:red"></i></a>
+                                        </div>
+                                    }
                                 </li>
                             }
+
                         }
                         else
                         {
-                            <li style="font-size: 20px;" class="card-text ml-4">
-                                @player.UsernameInGame
-                                <div class="ml-sm-5 d-inline-block float-right ">
-                                    @if (player.Status == false)
-                                    {
-                                        <a asp-route-playerName="@player.UsernameInGame" asp-route-roomId="@Model.Id" asp-action="Accept" asp-controller="GameEvent"> <i class="far fa-check-circle fa-lg ml-2" style="color:green"></i></a>
-                                    }
-                                    <a asp-route-playerName="@player.UsernameInGame" asp-route-roomId="@Model.Id" asp-action="Decline" asp-controller="GameEvent"> <i class="far fa-times-circle fa-lg ml-2" style="color:red"></i></a>
-                                </div>
+                            if (User.Identity.Name != player.Username)
+                            {
+                                <li style="font-size: 20px;" class="card-text ml-4">
+                                    @player.UsernameInGame
+                                    <div class="ml-sm-5 d-inline-block float-right ">
+                                        @if (player.Status == false)
+                                        {
+                                            <a asp-route-playerName="@player.UsernameInGame" asp-route-roomId="@Model.Id" asp-action="Accept" asp-controller="GameEvent"> <i class="far fa-check-circle fa-lg ml-2" style="color:green"></i></a>
+                                        }
+                                        <a asp-route-playerName="@player.UsernameInGame" asp-route-roomId="@Model.Id" asp-action="Decline" asp-controller="GameEvent"> <i class="far fa-times-circle fa-lg ml-2" style="color:red"></i></a>
+                                    </div>
 
-                            </li>
+                                </li>
+                            }
                         }
                     }
                 </ul>
