Move need files

--- a/GameHubCSharp/Views/Home/News.cshtml
+++ b/GameHubCSharp/Views/Home/News.cshtml
@@ -1,5 +1,5 @@
 ﻿@using GameHubCSharp.Models.View
-@using GameHubCSharp.Data.Models
+@using GameHubCSharp.DAL.Data.Models
 @model List<PostViewModel>
 <div class="" style="margin-left:15%;margin-right:15%">
 
