--- a/GameHubCSharp/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/GameHubCSharp/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using GameHubCSharp.Areas.Identity
 @using GameHubCSharp.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using GameHubCSharp.Data.Models
+@using GameHubCSharp.DAL.Data.Models
