Move Services and VMs to GameHub.BL layer

--- a/GameHubCSharp/Views/Admin/AdminHome.cshtml
+++ b/GameHubCSharp/Views/Admin/AdminHome.cshtml
@@ -1,4 +1,4 @@
-﻿@using GameHubCSharp.Models.View
+﻿@using GameHubCSharp.BL.Models.DTO
 @model AdminHomeViewModel
 
 <h1 class="text-white">Choose What To Add :</h1>
@@ -139,7 +139,7 @@
 
 @*Search*@
 
-<div class=" d-inline-block" >
+<div class=" d-inline-block">
     <input id="searchInput" type="search" class="form-control rounded d-inline-block" style=" width: 60%;" placeholder="Search" aria-label="Search"
            aria-describedby="search-addon" />
     <button onclick="searchedElement()" type="button" class="btn btn-outline-primary d-inline-block" style="color:greenyellow; border-color:greenyellow">search</button>
