--- a/GameHubCSharp/Views/GameEvent/GameEventDetail.cshtml
+++ b/GameHubCSharp/Views/GameEvent/GameEventDetail.cshtml
@@ -1,4 +1,4 @@
-﻿@model GameHubCSharp.Models.View.GameEventViewModel
+﻿@model GameHubCSharp.BL.Models.DTO.GameEventViewModel
 
 
 <div style="margin-bottom: 100px;margin-top: 5%"
