--- a/GameHubCSharp/Views/Home/News.cshtml
+++ b/GameHubCSharp/Views/Home/News.cshtml
@@ -1,4 +1,4 @@
-﻿@using GameHubCSharp.Models.View
+﻿@using GameHubCSharp.BL.Models.DTO
 @using GameHubCSharp.DAL.Data.Models
 @model List<PostViewModel>
 <div class="" style="margin-left:15%;margin-right:15%">
