--- a/GameHubCSharp/Views/Shared/_NavPartial.cshtml
+++ b/GameHubCSharp/Views/Shared/_NavPartial.cshtml
@@ -51,7 +51,7 @@
         {
 
             <li class="nav-item">
-                <p id="sendButton" class="card-text" style="color:#9fea92; font-size:1rm; padding:.5rem 1rem; font-weight: bold;font-family:" -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji""">
+                <p id="sendButton" class="card-text" style="color:#9fea92; font-size:1rem; padding:.5rem 1rem; font-weight: bold;font-family:" -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji""">
                     Admin : @User.Identity.Name
                 </p>
             </li>
