--- a/GameHubCSharp/Views/Home/News.cshtml
+++ b/GameHubCSharp/Views/Home/News.cshtml
@@ -155,4 +155,4 @@
     <!-- /.row -->
 
 </div>
-<a id="back-to-top" href="#" class="btn btn-light btn-lg back-to-top" role="button"><i style="color:white" class="far fa-arrow-alt-circle-up fa-lg"></i></a>
+<a id="back-to-top" href="#" class="btn btn-light btn-sm back-to-top" role="button"><i style="color:white" class="far fa-arrow-alt-circle-up fa-lg"></i></a>
