--- a/GameHubCSharp/wwwroot/css/style.css
+++ b/GameHubCSharp/wwwroot/css/style.css
@@ -113,14 +113,13 @@ form {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 20px #e60073, 0 0 20px #e60073, 0 0 20px #e60073, 0 0 20px #e60073, 0 0 20px #e60073;
     /* padding-left: 0.8rem;
     padding-right: 0.8rem;*/
-    padding-top: 0.6rem;
-    padding-bottom: 0.6rem;
+    padding: 0.9rem;
     border-radius: 50px;
     background-color: #060c1a;
     border: 3px solid #401544a3;
     position: fixed;
     bottom: 25px;
-    right: 25px;
+    right: 35px;
     display: none;
     margin-bottom: 5rem;
 }
