--- a/GameHubCSharp/Views/GameEvent/GameEventAdd.cshtml
+++ b/GameHubCSharp/Views/GameEvent/GameEventAdd.cshtml
@@ -1,4 +1,4 @@
-﻿@model GameHubCSharp.BL.Models.DTO.GameEventAddViewModel
+﻿@model GameHubCSharp.BL.Models.DTO.GameEventViewModel
 <main class="text-center">
     <form class="d-inline-block was-validated text-center add-form"
           asp-controller="GameEvent" asp-action="GameEventAdd" id="event-add" method="POST" style="margin-bottom: 100px;">
