--- a/GameHubCSharp/Views/GameEvent/GameEventDetail.cshtml
+++ b/GameHubCSharp/Views/GameEvent/GameEventDetail.cshtml
@@ -78,7 +78,7 @@
                     <form style="width:auto" id="event-del" asp-controller="GameEvent" asp-route-pesho="123" asp-action="GameEventDelete" method="post">
 
                         <input type="text" class="form-control is-invalid"
-                               asp-for="Id" value="@Model.Id" type="hidden" />
+                           asp-for="Id" value="@Model.Id" type="hidden" />
                         @*  <a href="/game/delete?id=@Model.Id" class="btn btn-primary border-0 bg-danger btn-lg mt-5 ml-3"
                             style="padding: 0.23em;margin-bottom: 4.5px">Delete</a>*@
                         <button class="btn btn-primary border-0 bg-danger btn-lg" type="submit">Delete</button>
@@ -90,32 +90,7 @@
                 var list = Model.Players.Where(p => p.Username == User.Identity.Name).ToList();
                 @if (list.Count == 0)
                 {
-
-
-                    <div style="position:relative;" id="last">
-
-                        <form class="mt-5 text-left form-event" id="form1" asp-controller="GameEvent" asp-action="GameEventAddPlayer"
-                              method="POST">
-                            <div class="text-left">
-                                <p style="color: lawngreen; margin-left: 5%" class="card-text mb-3">Your nick name :</p>
-                            </div>
-                            <input type="text" class="form-control is-invalid"
-                                   asp-for="Id" value="@Model.Id" name="gameEventId" type="hidden" />
-                            <input style="margin-left: 5%;width: 70%; margin-bottom: 4%" type="text" name="userNick" id="username"
-                                   class="form-control is-invalid d-inline-block"
-                                   aria-describedby="validatedInputGroupPrepend"
-                                   required>
-
-                            <button id="joinEvent" class="btn btn-primary border-0 mb-1 bg-dark mr-2 btn-lg ml-3">I'm in</button>
-
-                            @if ((bool?)ViewData["valid"] != true)
-                            {
-                                <div class="invalid-feedback">
-                                    <span style="color: #ff0000;font-size:15px;margin-left: 5%;">This nickname is already takken for this event.</span>
-                                </div>
-                            }
-                        </form>
-                    </div>
+                    @Html.PartialAsync("_AddPlayerPartial");
                 }
             }
 
