--- a/GameHubCSharp/Views/Shared/_AddPlayerPartial.cshtml
+++ b/GameHubCSharp/Views/Shared/_AddPlayerPartial.cshtml
@@ -1,4 +1,6 @@
-﻿<div style="position:relative;" id="last">
+﻿@model GameHubCSharp.DAL.Data.Models.GameEvent
+
+<div style="position:relative;" id="last">
 
     <form class="mt-5 text-left form-event" id="form1" asp-controller="GameEvent" asp-action="GameEventAddPlayer"
           method="POST">
@@ -21,4 +23,4 @@
             </div>
         }
     </form>
-</div>
+</div> 
